[package]
name = "incomeapp"
version = "0.1.0"
authors = ["Mindslayer001 <21kd1a1514@lendi.org>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.4.1"

[build-dependencies]
slint-build = "1.4"
